--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,96 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #333333;
+}
+.container {
+}
+header {
+    padding-top: 20px;
+  width: 930px;
+  height: 42px;
+  margin: auto;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 200px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Cover {
+  font-size: 1.75em;
+  font-weight: 500;
+  color: #fff;
+}
+.nav {
+  width: 250px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+}
+a{
+text-decoration: none;
+color: #808080;
+
+}
+
+.nav :hover{
+    color: #fff;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+
+.main{
+  width: 950px;
+  margin: auto;
+  color: white;
+  padding-left: 200px;
+}
+.main >h1{
+  margin-left: 90px;
+}
+.main >p{
+  width: 480px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.main >button{
+  padding: 10px;
+  font-weight: bold;
+  margin-left: 180px;
+
+
+}
+
+
+
+
+.Features{
+  width: 950px;
+  margin: auto;
+  color: white;
+  padding-left: 200px;
+}
+.Features >h1{
+  margin-left: 90px;
+}
+.Features >p{
+  width: 480px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.Features .button >button{
+  padding: 10px;
+  font-weight: bold;
+  margin-left: 14px;
+
+}
+.Features .button{
+margin-left: 120px;
+}
+
+
+
+
+.active{
+  color: #fff;
 }
